--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,25 @@
 body {
   background: lightgrey;
-  font-family: "Edu AU VIC WA NT Guides", cursive;
+  font-family: "Edu AU VIC WA NT Hand", cursive;
+}
+header {
+  border-bottom: 1px solid lightgrey;
+  padding: 0 0 30px 0;
+}
+main {
+  padding: 30px;
+}
+
+footer {
+  border-top: 1px solid lightgrey;
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-size: 13px;
+  color: rgba(0, 0, 0, 0.6);
+  font-weight: 500;
+}
+a {
+  color: rgb(235, 153, 198);
 }
 .weather-app {
   background: white;
@@ -10,13 +29,54 @@ body {
   border-radius: 16px;
   padding: 30px;
 }
+.weather-app-city {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+}
+.weather-app-details {
+  font-size: 16px;
+  line-height: 24px;
+  color: rgba(39, 33, 66, 0.4);
+  font-weight: 500;
+}
+.weather-app-details strong {
+  color: rgb(235, 153, 198);
+}
+.weather-app-temperature-container {
+  display: flex;
+}
+.weather-app-icon {
+  font-size: 44px;
+  margin-top: 22px;
+}
+.weather-app-temperature {
+  font-size: 80px;
+  font-weight: bold;
+  margin-left: 10px;
+}
+.weather-app-unit {
+  margin-top: 20px;
+  font-size: 28px;
+}
 .input-city {
   border: none;
   background: lightgrey;
   border-radius: 5px;
-  padding: 10px;
+  font-size: 16px;
+  padding: 15px 20px;
+  width: 80%;
 }
 .search-button {
   border: none;
-  color: lightgrey;
+  background: rgb(235, 153, 198);
+  padding: 15px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  color: white;
+  margin-left: 5px;
+}
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
 }
